--- a/index.html
+++ b/index.html
@@ -25,9 +25,15 @@
             <a href="https://api.whatsapp.com/send?phone=5531999511290&text=Ol%C3%A1%2C%20vim%20pelo%20site%20da%20Bird!" rel="next" target="_blank">
                 <li>Contato</li>
             </a>
-            <li>Resultados</li>
-            <li>Quero um analise</li>
-            <li>Metodos</li>
+            <a href="#depoimentos">
+                <li>Resultados</li>
+            </a>
+            <a href="https://respondi.app/v3YksW89">
+                <li>Quero um analise</li>
+            </a>
+            <a href="#metodos">
+                <li>Metodos</li>
+            </a>
         </ul>
 
  
@@ -231,7 +237,7 @@
     </section>
 
 
-    <section class="sec5">
+    <section class="sec5" id="metodos">
 
 
         <div class="como-funciona">
@@ -312,7 +318,7 @@
         </div>
     </section>
 
-    <section class="sec6">
+    <section class="sec6" id="depoimentos">
 
         <h2>NEGÓCIOS QUE JÁ <span id="escalaram">ESCALARAM</span></h2>
 
