--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <img src="assets/icons/Infoprodutos_black.svg" alt="" class="img-item">
                 </div>
                 <div class="text-esp">
-                    <h3>Lançamento de infoprofutos</h3>
+                    <h3>Lançamento de infoprodutos</h3>
                 </div>
             </div>
 
@@ -201,7 +201,7 @@
                         <img src="assets/icons/Mercado 2.svg" alt="">
                     </div>
                     <div class="text-item">
-                        <h3>Negocios Locais</h3>
+                        <h3>Negócios Locais</h3>
                     </div>
                 </div>
 
